  - Maintain database timestamps indicating when all backend data was last discovered
  - Log discovered HDHomeRun devices after device discovery completes
  - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
  - Use separate HTTP connection and DNS lookup cache for Electronic Program Guide (EPG) requests
  - Fix bug preventing recording rule discovery from executing if "Delete expired date/time recording rules after" setting has changed
  - Fix bug causing unnecessary timer updates when series episodes are available via multiple channels
  - Fix bug that allowed deleted timers to remain listed if mutliple timer rules were associated with a series
  - Fix bug that caused "Malformed JSON" errors during processing of EPG listings when no data was available

v1.3.13 (2019.02.12)
  - Update SQLite database engine to version 3.27.1
  - Update cURL library to version 7.64.0
  - Log detected stream properties (real-time, seekable, etc) for diagnostic purposes
  - Log unexpected zero length reads that occur on in-progress streams as errors
  - Detect and report dropped streams if data transfer rate falls to zero
  - Accurately set the media type (MIME type) stream indicator as reported by the DVR engine
  - Fix bug that caused a dropped stream to be waited on infinitely for more data to become available
  - Fix bug preventing Kodi from calling into SetRecordingLastPlayedPosition()

v1.3.12 (2019.02.02)
  - Fix bug introduced in v1.3.11 that prevented EPG listings for channels with subchannels (x.x) from loading

v1.3.11 (2019.02.02)
  - Update libhdhomerun library to version 2018.10.27
  - Use pipelined/multiplexed HTTP requests when accessing backend EPG data
  - Fix bug introduced in v1.3.9 that caused different EPG broadcast IDs to be generated
  - Fix bug introduced in v1.3.9 that caused invalid stream end times to be reported on 32-bit GCC platforms