@@ -11,6 +11,7 @@ v2.0.0 (2019.04.xx)
   - Log discovered HDHomeRun devices after device discovery completes
   - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
   - Use separate HTTP connection and DNS lookup cache for Electronic Program Guide (EPG) requests
+  - Block attempts to add/remove/update recording rules if no tuners with DVR authorization were discovered
   - Fix bug preventing recording rule discovery from executing if "Delete expired date/time recording rules after" setting has changed
   - Fix bug causing unnecessary timer updates when series episodes are available via multiple channels
   - Fix bug that allowed deleted timers to remain listed if mutliple timer rules were associated with a series
